YTG-#33 [상세페이지][레이아웃] 레이아웃 달라진 부분 수정

--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -32,11 +32,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
-            android:fontFamily="@font/app_main_font"
+            android:fontFamily="@font/sdgnh"
             android:text="@{commentItem.writer}"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/content"
             app:layout_constraintStart_toEndOf="@id/profile"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +45,7 @@
             android:id="@+id/content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="9dp"
             android:fontFamily="@font/app_main_font"
             android:text="@{commentItem.content}"
@@ -65,7 +64,6 @@
             android:text="@{commentItem.createdDate}"
             android:textColor="@color/colorWhite"
             android:textSize="12sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="2020.02.22" />
