--- a/features/details/src/main/res/layout/layout_contents_detail.xml
+++ b/features/details/src/main/res/layout/layout_contents_detail.xml
@@ -117,11 +117,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="54dp"
             android:layout_marginEnd="20dp"
-            android:fontFamily="@font/app_main_font"
+            android:fontFamily="@font/sdgnh"
             android:gravity="end"
             android:textColor="@color/colorSemiBlack"
             android:textSize="14sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/count_comment"
             app:layout_constraintTop_toBottomOf="@id/content_detail"
@@ -139,6 +138,7 @@
             android:text="@{detail.detailedPost.createdDate}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/user"
             app:layout_constraintTop_toBottomOf="@id/user"
