YTG-#12 [회원가입][네트워크 모듈 변경] 회원가입 구현

--- a/features/signup/src/main/res/layout/fragment_signup.xml
+++ b/features/signup/src/main/res/layout/fragment_signup.xml
@@ -161,6 +161,7 @@
             android:background="@{vm.validSignUp ? @drawable/bg_rounded_button_color_purple : @drawable/bg_rounded_button_color_grey}"
             android:text="@string/btn_signup"
             android:textColor="@color/colorWhite"
+            android:onClick="@{() -> vm.onClick()}"
             app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
