YTG-#33 [상세페이지][뷰모델] commentRepository 에러 수정 및 댓글 리사이클러뷰 바텀 패딩 추가

--- a/features/details/src/main/res/layout/fragment_details.xml
+++ b/features/details/src/main/res/layout/fragment_details.xml
@@ -39,6 +39,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:clipToPadding="false"
+                    android:paddingBottom="50dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     bind:setItems="@{vm.comments}"
                     tools:listitem="@layout/item_comments" />
