YTG-#31 [로그인][리뷰반영] 리뷰 반영
- private 처리
- vm으로 sharedPref 변경
- 네이밍 수정

--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -113,7 +113,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_button_color_purple"
             android:gravity="center"
-            android:onClick="@{() -> vm.onClick()}"
+            android:onClick="@{() -> vm.onLoginButtonClick()}"
             android:text="@string/login_button"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toTopOf="@+id/txt_guest_login_button" />
