--- a/features/mypage/src/main/res/values/attrs.xml
+++ b/features/mypage/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
         <attr name="icon" format="reference" />
         <attr name="android:enabled" />
         <attr name="android:text" />
+        <attr name="android:visibility"/>
     </declare-styleable>
     <declare-styleable name="CheckableIndicatorButton">
         <attr name="android:checked" />
