--- a/features/mypage/src/main/res/layout/indicator_button.xml
+++ b/features/mypage/src/main/res/layout/indicator_button.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.az.mypage.lib.CheckableImageView
         android:id="@+id/img_icon"
-        android:layout_width="42dp"
-        android:layout_height="62dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
         android:adjustViewBounds="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -16,18 +18,17 @@
         android:id="@+id/txt_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-medium"
-        android:text="adsfasdfgdfgadfasdfasdf"
         android:textColor="@color/colorGray"
-        android:textSize="16sp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_icon" />
+        app:layout_constraintTop_toBottomOf="@id/img_icon" />
 
     <com.az.mypage.lib.CheckableImageView
         android:id="@+id/img_indicator"
-        android:layout_width="75dp"
+        android:layout_width="match_parent"
         android:layout_height="4dp"
         android:layout_marginTop="10dp"
         android:background="@color/colorPurple"
@@ -35,4 +36,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_label" />
 
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
