YTG-#33 [리사이클러뷰무한스크롤][라이브러리] 리사이클러뷰 무한 스크롤라이브러리랑 예제 만듦 (#39)
* YTG-#33 [리사이클러뷰무한스크롤][라이브러리] 리사이클러뷰 무한 스크롤라이브러리

- 리사이클러뷰 무한 스크롤라이브러리 개발
- 예제 작성

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,6 +5,11 @@
     app:startDestination="@id/loginFragment">
 
     <fragment
+        android:id="@+id/infiniteRecyclerExampleFragment"
+        android:name="com.az.infinite_recyclerview.example.InfiniteRecyclerExampleFragment"
+        android:label="InfiniteRecyclerExampleFragment" />
+
+    <fragment
         android:id="@+id/loginFragment"
         android:name="com.az.login.view.LoginFragment"
         android:label="LoginFragment"
