--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -2,17 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/infiniteRecyclerExampleFragment">
-
-    <fragment
-        android:id="@+id/infiniteRecyclerExampleFragment"
-        android:name="com.az.infinite_recyclerview.example.InfiniteRecyclerExampleFragment"
-        android:label="InfiniteRecyclerExampleFragment" />
-
-    <fragment
-        android:id="@+id/infiniteRecyclerExampleFragment"
-        android:name="com.az.infinite_recyclerview.example.InfiniteRecyclerExampleFragment"
-        android:label="InfiniteRecyclerExampleFragment" />
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/loginFragment"
