YTG-#43 [게스트][회원가입] 게스트 회원가입 기능 변경
- 게스트 로그인 시 회원가입 플로 변경

--- a/app/src/main/res/layout/guest_toolbar.xml
+++ b/app/src/main/res/layout/guest_toolbar.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_signUp"
+        android:id="@+id/btn_to_login"
         android:layout_width="108dp"
         android:layout_height="24dp"
         android:background="@drawable/rounded_button_color_gray"
