--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -5,11 +5,6 @@
     app:startDestination="@id/loginFragment">
 
     <fragment
-        android:id="@+id/infiniteRecyclerExampleFragment"
-        android:name="com.az.infinite_recyclerview.example.InfiniteRecyclerExampleFragment"
-        android:label="InfiniteRecyclerExampleFragment" />
-
-    <fragment
         android:id="@+id/loginFragment"
         android:name="com.az.login.view.LoginFragment"
         android:label="LoginFragment"
@@ -83,9 +78,14 @@
 
     <fragment
         android:id="@+id/detailsFragment"
-        android:name="com.az.detail.DetailsFragment"
+        android:name="com.az.detail.view.DetailsFragment"
         android:label="DetailsFragment"
-        app:moduleName="details" />
+        app:moduleName="details">
+        <argument
+            android:name="postId"
+            android:defaultValue="0"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/createFragment"
