--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="commentItem"
-            type="com.az.detail.TempCommentData" />
+            type="com.az.model.posts.detail.comments.CommentData" />
 
     </data>
 
@@ -21,8 +22,8 @@
             android:id="@+id/profile"
             android:layout_width="27dp"
             android:layout_height="26dp"
+            android:layout_marginTop="5dp"
             android:src="@drawable/ic_profile"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,26 +32,41 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
-            android:fontFamily="@font/app_main_font"
-            android:text="신입 가나다님"
+            android:fontFamily="@font/sdgnh"
+            android:text="@{commentItem.writer}"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/content"
             app:layout_constraintStart_toEndOf="@id/profile"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="신입 가나다님" />
 
         <TextView
+            android:id="@+id/content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="9dp"
             android:fontFamily="@font/app_main_font"
-            android:text="ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ"
+            android:text="@{commentItem.content}"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/date"
             app:layout_constraintStart_toStartOf="@id/user_comment"
-            app:layout_constraintTop_toBottomOf="@id/user_comment" />
+            app:layout_constraintTop_toBottomOf="@id/user_comment"
+            tools:text="ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/app_main_font"
+            android:text="@{commentItem.createdDate}"
+            android:textColor="@color/colorWhite"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="2020.02.22" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
