YTG-#50 [메인페이지][게스트로그인] 게스트로그인 멘트 수정 및 디버그

--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -157,7 +157,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:fontFamily="@font/app_main_font"
-            android:text="@{@string/count(humorItem.comments)}"
+            android:text="@{@string/count(humorItem.commentCount)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             android:textStyle="bold"
