YTG-#50 [상세페이지][댓글창] 게스트 로그인일 경우 댓글창 안보이는 기능 추가

--- a/features/details/src/main/res/layout/fragment_details.xml
+++ b/features/details/src/main/res/layout/fragment_details.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.az.detail.viewmodel.DetailsViewModel" />
@@ -55,6 +57,7 @@
             android:layout_height="56dp"
             android:background="@color/colorWhite"
             android:paddingHorizontal="30dp"
+            android:visibility="@{vm.isGuestLogin ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <EditText
