--- a/features/details/src/main/res/drawable/btn_comment_send.xml
+++ b/features/details/src/main/res/drawable/btn_comment_send.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/ic_comment_btn_default"
-        android:state_checked="false" />
+        android:state_enabled="false" />
     <item
         android:drawable="@drawable/ic_comment_btn_enabled"
-        android:state_checked="true" />
+        android:state_enabled="true" />
 </selector>
