--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
-            android:fontFamily="@font/sdgnh"
+            android:fontFamily="@font/sdgnb"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="@id/content"
