YTG-#50 [상세페이지][리스너] 좋아요, 북마크 버튼 기능 추가

--- a/features/details/src/main/res/layout/fragment_details.xml
+++ b/features/details/src/main/res/layout/fragment_details.xml
@@ -34,7 +34,8 @@
                 <include
                     android:id="@+id/contents_detail_include"
                     layout="@layout/layout_contents_detail"
-                    bind:detail="@{vm.details}" />
+                    bind:detail="@{vm.details}"
+                    bind:listener="@{vm.listener}" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/comments_rv"
