YTG-#51 [글작성페이지][패키지구조] 패키지 구조 정리

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -89,7 +89,7 @@
 
     <fragment
         android:id="@+id/createFragment"
-        android:name="com.az.create.CreateFragment"
+        android:name="com.az.create.view.CreateFragment"
         android:label="CreateFragment"
         app:moduleName="create" />
 </navigation>
