--- a/features/mypage/src/main/res/layout/fragment_my_page.xml
+++ b/features/mypage/src/main/res/layout/fragment_my_page.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.az.mypage.ui.viewModel.MyPageFragmentViewModel" />
+    </data>
+
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +28,7 @@
                 layout="@layout/layout_tab"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginTop="33dp"/>
+                android:layout_marginTop="33dp" />
 
         </LinearLayout>
 
